All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/SPM_Top_Level_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Holds the summary for &apos;First Time Fix&apos;, &apos;Repeat Visit&apos;, &apos;Mean Time to Repair&apos;, &apos;Mean Time to Complete&apos; and &apos;ART within SLA&apos; Metrics at &apos;Case/Service Request/Primary Workorder&apos; level.</description>
    <label>SPM - Top Level Summary</label>
    <nameField>
        <label>SPM - Top Level Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SPM - Top Level Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>