All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <description>Holds the time to complete the issue</description>
    <inlineHelpText>Holds the time to complete the issue</inlineHelpText>
    <label>Completion Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>