All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/Is_Fixed_First_Time__c.field-meta.xml
<CustomField>
    <fullName>Is_Fixed_First_Time__c</fullName>
    <description>Holds the value of FTF Summary (0 - Non-FTF, 1-FTF).</description>
    <inlineHelpText>Holds the value of FTF Summary (0 - Non-FTF, 1-FTF)</inlineHelpText>
    <label>Is Fixed First Time</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>