All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/Is_Onsite_Response_Within_SLA__c.field-meta.xml
<CustomField>
    <fullName>Is_Onsite_Response_Within_SLA__c</fullName>
    <formula>IF(!ISNULL(SLA_Onsite_Response_Time__c),IF(SLA_Onsite_Response_Time__c &gt;  Actual_Onsite_Response_Time__c, 1, 0),NULL)</formula>
    <label>Is Onsite Response Within SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>