All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/Is_Repeat_Visit__c.field-meta.xml
<CustomField>
    <fullName>Is_Repeat_Visit__c</fullName>
    <description>Holds the value of Repeat Visit computation (0 - Non-Repeat Visit, 1-Repeat Visit)</description>
    <inlineHelpText>Holds the value of Repeat Visit computation (0 - Non-Repeat Visit, 1-Repeat Visit)</inlineHelpText>
    <label>Is Repeat Visit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>