All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/Labor_Time__c.field-meta.xml
<CustomField>
    <fullName>Labor_Time__c</fullName>
    <description>Holds the Labor time for fixing the issue</description>
    <inlineHelpText>Holds the Labor time for fixing the issue</inlineHelpText>
    <label>Labor Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>