All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/Primary_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Work order</description>
    <inlineHelpText>Lookup to Work order</inlineHelpText>
    <label>Primary Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>SPM - Top Level Summaries</relationshipLabel>
    <relationshipName>SPM_Top_Level_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>