All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/Repair_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Time__c</fullName>
    <formula>Labor_Time__c - Dead_Time__c</formula>
    <label>Repair Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>