All_Component_DX/force-app/main/default/objects/SPM_Top_Level_Summary__c/fields/SLA_Onsite_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Onsite_Response_Time__c</fullName>
    <description>Holds the value of SLA Onsite Response Time</description>
    <inlineHelpText>Holds the value of SLA Onsite Response Time</inlineHelpText>
    <label>SLA Onsite Response Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>